@@ -66,14 +66,40 @@ ul.forum-links {
   padding: 0;
 }
 
-.forum-links li {
-  float: left; /* This is needed to turn them into buttons in CSS. */
-  margin: 0;
-  padding: 0pt 15px 0pt 0pt;
-  list-style-image: none;
-  list-style-type: none;
-  background: none;
+/* Image replacement */
+.forum-links li,
+.forum-post-links li,
+.reply-link {
+  position: relative;
+  margin: 0px; 
+  padding: 0px;
+  /* hide overflow:hidden from IE5/Mac */
+  /* \*/
+  overflow: hidden;
+  /* */
 }
+
+.forum-links li,
+.reply-link {
+  width: 95px;
+  height: 30px;
+}
+
+.forum-post-links li {
+  height: 16px;
+  width: 50px;
+}
+
+.forum-links li span.image-replace,
+.forum-post-links li span.image-replace,
+.reply-link span.image-replace {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; /*for Opera 5 and 6*/
+}
+
 
 /*** FORUM & TOPIC LIST *****************************************************/
 
